--- a/Lab2/backend/package.json
+++ b/Lab2/backend/package.json
@@ -7,5 +7,8 @@
   },
   "author": "Marvin Koch",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@azure/functions": "^4.6.0"
+  }
 }
