--- a/Lab2/backend/package.json
+++ b/Lab2/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./api/greeting/index.js",
   "scripts": {
     "start": "node ./api/greeting/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
