--- a/Lab2/backend/package.json
+++ b/Lab2/backend/package.json
@@ -4,7 +4,7 @@
   "main": "./api/greeting/index.js",
   "scripts": {
     "start": "node ./api/greeting/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\""
   },
   "author": "Marvin Koch",
   "license": "ISC",
